# recallm

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
benchmarks/: distributions.py  index.html  report.py  run.py
changelog/: index.html
configuration/: index.html
contributing/: index.html
dashboards/: semantic-cache.json
docs/: CNAME  cache-decision-logic.md  changelog.md  configuration.md  contributing.md  index.md  observability.md
docs/stylesheets/: extra.css
getting-started/: index.html
how-it-works/: index.html
javascripts/: extra.js
observability/: index.html
search/: search_index.json
src/llm_semantic_cache/: __init__.py  cache.py  config.py  context.py  embeddings.py  metrics.py  models.py  prompt.py  similarity.py
src/llm_semantic_cache/storage/: __init__.py  base.py  memory.py  redis.py
storage-backends/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_cache.py  test_config.py  test_context.py  test_dashboard.py  test_embeddings.py  test_metrics.py  test_models.py  test_prompt.py  test_similarity.py
tests/storage/: test_memory.py  test_redis.py
